# QuanLyTuThienPTTK

./: .gitignore  HUONG_DAN_CAI_DAT.md  README.md  index.html  main.js  package-lock.json  package.json  vite.config.js
backend/: append_profile.js  check_users.js  clean_and_seed.js  package-lock.json  package.json  test_profile.js  update_campaign_db.js  update_db.js  update_profile_db.js
backend/src/: db.js  index.js  migrate.js
backend/src/controllers/: authController.js  campaignController.js  certificationController.js  concurrencyDemoController.js  evaluationController.js  executiveController.js  financeController.js  (+4 more)
database/: 01_sequences.sql  02_tables.sql  03_indexes.sql  04_triggers_auto_pk.sql  05_triggers_business.sql  06_stored_procedures.sql  07_stored_functions.sql  08_SeedData.sql
docs/: Campaign_Enrollment.md  Evaluation & Achievement.md  GIT_COMMIT.md  GIT_GUIDELINE.md  List_Feat.md  Logistics, Finance & Proof.md  PROJECT_STRUCTURE.md  design.md
docs/changelog/: module_BDH.md  module_BQL.md  module_Dungchung.md  module_TNV.md
frontend/: App.jsx  index.css  main.jsx
frontend/context/: AuthContext.jsx
frontend/services/: auth.js  campaigns.js  certification.js  evaluation.js  executive.js  finance.js  logistics.js  proof.js  statistics.js  tauriApi.js  validation.js
frontend/styles/: global.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: campaign_cmd.rs  mod.rs
src-tauri/src/db/: mod.rs  procedures.rs
src-tauri/src/models/: mod.rs
tools/: smoke-electron.mjs  smoke-ui.mjs
(+73 files in other folders)
