[package]
name = "volunteer-management-system"
version = "0.1.0"
description = "Hệ Thống Quản Lý Hoạt Động Tình Nguyện Sinh Viên"
authors = ["HQTCSDL Team"]
edition = "2021"

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Oracle Database (OCI driver)
oracle = { version = "0.6", features = ["chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Thread-safe global state (cho connection pool)
once_cell = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
